# divinityworks-desktop

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  build-electron.sh  docker-compose.yml  google-setup.md  start.sh
.github/workflows/: backend-deploy.yml  cloudflare-deploy.yml  desktop-build.yml  electron-build.yml  pages.yml  x-tests.yml
apps/cli/: package-lock.json  package.json  todo.md  tsconfig.json
apps/cli/src/: app.ts  server.ts
apps/docs/: docs.json
apps/experimental/chat_widget/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
apps/experimental/simulation_runner/: Dockerfile  db.py  requirements.txt  scenario_types.py  service.py  simulation.py
apps/python-sdk/: .gitignore  README.md  pyproject.toml  requirements.txt
apps/python-sdk/src/rowboat/: __init__.py  client.py  schema.py
apps/rowboat/: .gitignore  Dockerfile  README.md  instrumentation-client.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  scripts.Dockerfile
apps/rowboatx/: global.d.ts  next.config.ts  package-lock.json  package.json
apps/x/: ANALYTICS.md  CODE_MODE_ENGINES_PLAN.md  LIVE_NOTE.md  MINI_APPS_PLAN.md  VIDEO_MODE.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
cloudflare/: api-metadata.json  api-worker.js  metadata.json  worker.js  wrangler.toml
cloudflare/cloud-divinity/: Dockerfile  setup.sh  supervisord.conf
cloudflare/saas/: package-lock.json  package.json  tsconfig.json  wrangler.toml
landing/: CNAME  gen_worker.js  gen_worker_classic.js  index.html  styles.css
(+911 files in other folders)
