[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rowboat"
version = "5.0.1"
authors = [
    { name = "Ramnique Singh", email = "ramnique@rowboatlabs.com" },
]
description = "Python sdk for the Rowboat API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/rowboatlabs/rowboat/tree/main/apps/python-sdk"
"Bug Tracker" = "https://github.com/rowboatlabs/rowboat/issues" 